@@ -302,7 +302,8 @@ public class GenericData {
   }
 
   /** Default implementation of {@link GenericEnumSymbol}. */
-  public static class EnumSymbol implements GenericEnumSymbol {
+  public static class EnumSymbol
+      implements GenericEnumSymbol, Comparable<GenericEnumSymbol>  {
     private Schema schema;
     private String symbol;
 
@@ -325,6 +326,11 @@ public class GenericData {
 
     @Override
     public String toString() { return symbol; }
+
+    @Override
+    public int compareTo(GenericEnumSymbol that) {
+      return GenericData.get().compare(this, that, schema);
+    }
   }
 
   /** Returns a {@link DatumReader} for this kind of data. */
